unpackaged/main/default/objects/Marketing_Prospect__c/Marketing_Prospect__c.object-meta.xml
<CustomObject>
    <label>Marketing Prospect</label>
    <nameField>
        <displayFormat>MP - {0000000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Marketing Prospects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>