unpackaged/main/default/objects/Marketing_Prospect__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(NOT(ISBLANK(Contact__r.Account.Name )),Contact__r.Account.Name,&#39;-&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>