unpackaged/main/default/objects/Marketing_Prospect__c/fields/Brochure_Sent__c.field-meta.xml
<CustomField>
    <fullName>Brochure_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Brochure Sent</label>
    <type>Checkbox</type>
</CustomField>