unpackaged/main/default/objects/Marketing_Prospect__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Marketing Prospects</relationshipLabel>
    <relationshipName>Marketing_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>