unpackaged/main/default/objects/Marketing_Prospect__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <formula>IF( NOT( ISBLANK( Contact__r.Email)), Contact__r.Email,&#39;-&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>