unpackaged/main/default/objects/Marketing_Prospect__c/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <formula>IF( NOT( ISBLANK( Contact__r.Phone)), Contact__r.Phone,&#39;-&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>