unpackaged/main/default/objects/Marketing_Prospect__c/fields/Last_Mass_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Mass_Email__c</fullName>
    <label>Last Mass Email</label>
    <type>DateTime</type>
</CustomField>