unpackaged/main/default/objects/Marketing_Prospect__c/fields/Marketing_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Initiative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Initiative</label>
    <referenceTo>Marketing_Initiative__c</referenceTo>
    <relationshipLabel>Marketing Prospects</relationshipLabel>
    <relationshipName>Marketing_Prospects</relationshipName>
    <type>Lookup</type>
</CustomField>