unpackaged/main/default/objects/Marketing_Prospect__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Call Made</fullName>
            </value>
            <value>
                <fullName>Follow Up Call Made</fullName>
            </value>
            <value>
                <fullName>Mass Email Sent</fullName>
            </value>
            <value>
                <fullName>Appointment Scheduled</fullName>
            </value>
            <value>
                <fullName>Prospect Not Interested</fullName>
            </value>
            <value>
                <fullName>Contact After 1 Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>