unpackaged/main/default/objects/Marketing_Prospect__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <booleanFilter>(1 AND 2)OR 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Brochure_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Contact__c</field>
        <operation>startsWith</operation>
        <value>V</value>
    </filters>
    <filters>
        <field>Meeting_Scheduled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Meeting_Scheduled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>